--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Principal</title>
   </head>
   <body>
-    <div class="card"></div>
+    <div class="card">
+      <div class="imgBx">
+        <img src="/file/imgDeivid.jpg" alt="" />
+      </div>
+    </div>
   </body>
 </html>
