--- a/index.html
+++ b/index.html
@@ -10,7 +10,22 @@
   <body>
     <div class="card">
       <div class="imgBx">
-        <img src="/file/imgDeivid.jpg" alt="" />
+        <img src="/file/imgDeivid.jpg" alt="Rapaz com blusa preta" />
+      </div>
+        <div class="content">
+          <div class="details">
+            <h2>Deivid Souza<br /><span>Auxiliar técnico</span></h2>
+            <div class="data">
+              <h3>342<br><span>Posts</span></h3>
+              <h3>120k<br><span>Followers</span></h3>
+              <h3>285<br><span>Following</span></h3>
+            </div>
+            <div class="actionBtn">
+              <button>E-mail</button>
+              <button>Ligar</button>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
