Inclusão de ícones e alterações no conteúdo

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
           <div class="details">
             <h2>Deivid Souza<br /><span>Auxiliar técnico</span></h2>
             <div class="data">
-              <h3>342<br><span>Posts</span></h3>
-              <h3>120k<br><span>Followers</span></h3>
-              <h3>285<br><span>Following</span></h3>
+              <a href="https://www.linkedin.com/in/deivid-souza-5a395448/" target="_blank"><img src="/file/linkedin.png"><br><span>Linkedin</span></a>
+              <a href="https://github.com/deivid-rds" target="_blank"><img src="/file/github.png"><br><span>Github</span></a>
+              <a href="https://wa.me/5519982785512" target="_blank"><img src="/file/whatsapp.png"><br><span>Whatsapp</span></a>
             </div>
             <div class="actionBtn">
-              <button>E-mail</button>
-              <button>Ligar</button>
+              <a href="mailto:ddeividd.eu@hotmail.com" class="btn">E-mail</a>
+              <a href="tel:+5519982785512" class="btn" id="btnTel">Ligar</a>
             </div>
           </div>
         </div>
